# block2char

./: .gitignore  CMakeLists.txt  Readme.md  global_config.py
assets/: zh_vocab.txt
src/: decoder.py  learn_linear_map.py
src/utils/: analysis_pixel_char_freq.py  statistic_image_pixel.cc  statitic_news_word.py
